--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,3 +1,48 @@
+@use 'vars';
+
+html,
 body{
-    
+    height: 100%;
 }
+
+
+body{
+    color: vars.$darkbluetext;
+    font-size: 15px;
+    line-height: 23px;
+    @extend %quicksand-500;
+    display: flex;
+    flex-direction: column;
+}
+
+.main{
+    flex-grow: 1;
+}
+
+.conteiner{
+    max-width: 1770px;
+    margin: 0 auto;
+    padding: 0 15px;
+}
+
+a{
+    color: #7b7b7b;
+    font-size: 15px;
+    line-height: 23px;
+    @extend %quicksand-500;   
+}
+
+.title{
+    text-align: center;
+    @extend %roboto-700;
+    font-size: 40px;
+    line-height: 55px;
+    color: vars.$blacktext;
+    margin-bottom: 40px;
+}
+
+//  .text{
+//     max-width: 570px;
+//     margin: 0 auto 55px;
+//     color: #7b7b7b;
+//  }
