--- a/app/scss/_reset.scss
+++ b/app/scss/_reset.scss
@@ -23,8 +23,8 @@ h4,
 h5,
 h6,
 p,
-ul[class],
-ol[class],
+ul,
+ol,
 li,
 figure,
 figcaption,
@@ -32,6 +32,22 @@ blockquote,
 dl,
 dd {
     margin: 0;
+}
+
+ul{
+    list-style: none;
+}
+
+img{
+    max-width: 100%;
+    display: block;
+}
+
+input,
+button,
+textarea,
+select{
+    font-style: inherit;
 }
 
 a {
