--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,9 +1,420 @@
-@import 'vars';
-@import 'fonts';
-@import 'reset';
-@import 'global';
+@use 'fonts';
+@use 'reset';
+@use 'vars';
+@use 'global';
+@use 'libs';
+@use 'media';
+
+.header{
+    
+    &__inner{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 50px 0;
+        
+    }
+}
+
+.menu{
+    
+    &__list{
+        display: flex;
+    }
+
+    &__list-item + .menu__list-item{
+        margin-left: 32px;
+    }
+
+    &__list-link{
+        color: vars.$headerblue;
+        @extend %roboto-700;
+        font-size: 17px;
+        line-height: 20px;
+    }
+}
+
+.user-nav{
+    display: flex;
+
+    &__link-search{
+        padding: 17px;
+        border-radius: 50%;
+        background-color: #edf1f4;
+        
+    }
+
+    &__choose{
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        width: 178px;
+        background-color: #fcd7b6;
+        border-radius: 25px;
+        margin: 0 20px ;
+    }
+
+    &__link-border{
+        position: relative;
+    }
+    &__link-border::after{
+        content: "";
+        position: absolute;
+        width: 2px;
+        height: 32px;
+        background-color: #fde7d3;
+        bottom: -8px;
+        left: 53px;
+    }
 
 
+    &__link-grid{
+        padding: 15px;
+        border-radius: 50%;
+        background-color: vars.$accentblue
+    }    
 
-@import 'media';
+    &__link{
+        position: relative;
+    }
 
+    &__num{
+        position: absolute;
+        bottom: 10px;
+        left: 10px;
+        background-color: #fff;
+        border-radius: 50%;
+        font-size: 10px;
+        line-height: 16px;
+        width: 16px;
+        height: 16px;
+        text-align: center;
+        color: vars.$darkbluetext;
+    }
+   
+}
+
+.footer-top{
+    display: flex;
+    padding: 80px 0 75px;
+    font-size: 11px;
+     
+
+    &__contact{
+        max-width: 200px;
+        width: 100%;
+        margin-right: 120px;
+    }
+
+    &__logo{
+        display: block;
+        margin-bottom: 30px;
+    }
+
+    &__nav{
+        max-width: 170px;
+        width: 100%;
+        margin-right: 115px;
+        padding: 22px 0;
+    }
+
+    &__form{
+        max-width: 275px;
+        width: 100%;
+        padding: 22px 0;
+    }
+
+    &__text{
+        line-height: 22px;
+        margin-bottom: 16px;
+        color: #7b7b7b;
+        margin-bottom: 30px;
+    }
+
+    &__item-title{
+    font-size: 11px;
+    line-height: 15px;
+    text-align: start;
+    color: #1f2044;
+    }
+
+    &__input{
+        max-width: 170px;
+        width: 100%;
+        padding: 15px;
+        border: none;
+        background-color: #fef7f0;
+
+        &::placeholder{
+            color: #234969;
+        }
+    }
+    
+    &__btn{
+        padding: 14px 19px;
+        border: none;
+        color: #fff;
+        background-color: #a3bbc8;
+        cursor: pointer; 
+        transition: all .3s;
+        &:hover{
+            background-color: #436372;
+        }   
+    }
+    
+    
+
+}
+
+.footer-bottom{
+    display: flex;
+    justify-content: space-between;
+    border-top: 1px solid #dae4e9;
+    align-items: center;
+    padding: 40px 0;
+
+    &__text{
+        color: #7b7b7b;
+    }
+
+    &__link + .footer-bottom__link{
+        border-left: 1px solid #7b7b7b;
+    }
+    
+    &__link{
+        padding: 1px 10px;
+    }
+}
+
+.slider{
+    
+    &__item{
+        background-color: #fcd7b6;
+        display: flex !important;
+        justify-content: space-between;
+        padding: 100px 180px 84px 300px;
+        
+    }
+
+    &__item-content{
+        margin-top: 121px;
+    }
+
+    &__title{
+        font-size: 69px;
+        line-height: 72px;
+        color: #243f4d;
+        margin-bottom: 26px;
+    }
+
+    &__text{
+        max-width: 370px;
+        font-size: 18px;
+        line-height: 32px;
+        color: #436372;
+        margin-bottom: 51px;
+    }
+
+    &__btn{
+        padding: 24px 100px 23px 26px;
+        background-color: vars.$accentblue;
+        position: relative;
+        font-weight: 700;
+        color: #fff;
+        &::after{
+            content: "";
+            background-image: url('../images/icons/arrow-right.svg');
+            position: absolute;
+            width: 22px;
+            height: 12px;
+            top: 26px;
+            right: 11px;
+        }
+        &:hover{
+            background-color: #436372;
+        }
+    }
+
+    
+}
+
+.slick-dots{
+    display: flex;
+    justify-content: center;
+    position: relative;
+    margin: -70px auto 0;
+    
+    li{
+        padding: 0 5px;
+
+        button{
+            border: none;
+            background-color: #fde3cc;
+            color: #667983;
+            width: 30px;
+            height: 30px;
+            border-radius: 50%;
+
+            &:hover{
+                background-color: #fff;
+                color: #243f4d;
+            }
+        }
+    }
+}
+
+.features{
+
+    &__items{
+        padding: 111px 0 45px;
+        background-color: #fef7f0;
+        display: flex;
+        justify-content: space-around;
+        
+    }
+
+    &__title{
+        font-size: 17px;
+        line-height: 21px;
+        color: #414141;
+        margin-bottom: 15px;
+
+    }
+
+    &__text{
+        font-size: 14px;
+        line-height: 19px;
+    }
+
+    &__item{
+        position: relative;
+        &::before{
+            content: "";
+            position: absolute;
+            width: 53px;
+            height: 56px;
+            top: 1px;
+            left: -73px;
+        }
+    }
+
+    &__item-support::before{
+        background-image: url(../images/icons/support-clock.png);
+        
+
+    }
+
+    &__item-delivery::before{
+        background-image: url(../images/icons/delivery-car.png);
+        height: 40px;
+        width: 59px;
+    
+    }
+
+    &__item-payment::before{
+        background-image: url(../images/icons/credit-card.png);
+        width: 56px;
+
+    }
+
+}
+
+.product{
+    padding: 75px 0;
+    display: flex;
+    justify-content: center;
+
+    &__list{
+        display: flex;
+        justify-content: center;
+        margin-bottom:  80px;
+    }
+
+    &__list-item + .product__list-item{
+        margin-left: 31px;
+    }
+
+    &__list-link:hover{
+        color: #1a1a1a;
+    }
+
+    &__items{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-column-gap: 35px;
+    }
+
+}
+
+.product-item{
+    width: 270px;
+    text-align: center;
+    
+
+    &__img-box{
+        position: relative;
+        height: 290px;
+        overflow: hidden;
+        margin-bottom: 10px;
+        
+    }
+
+    &__img{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+    &__link-box{
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: 53px;
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-between;
+        max-width: 165px;
+        width: 100%;
+        transform: translateY(250%);
+        transition: all .3s;
+        
+       
+    }
+
+    &:hover{
+        .product-item__link-box{
+            transform: translateY(0);
+        }
+    }
+        
+    
+
+    &__link{
+        display: inherit;
+        background-color: #fff;
+        padding: 13px;
+        border-radius: 50%;
+        &:hover{
+            background-color: #a3bbc8;
+            svg{
+                path{
+                    fill:#fff;
+                }
+                circle{
+                    fill: #fff;
+                }
+            }
+        }      
+    }
+
+    &__title{
+        margin-bottom: 7px;
+    }
+
+    &__price{
+        font-weight: 600;
+        color: #a3bbc8;
+    }
+
+}
