--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -418,3 +418,144 @@
     }
 
 }
+
+
+.proposal{
+    padding: 140px 0 50px;
+
+    &__items{
+        display: flex;
+        justify-content: space-between;
+        column-gap: 23px;
+
+    }
+
+    &__item{
+        max-width: 870px;
+        width: 100%;
+        height: 390px;
+        background-color: #feefe2;
+        display: flex;
+        justify-content: space-around;
+        position: relative;    
+    }
+
+    &__img{
+        position: absolute;
+        top: -111px;
+        left: 128px;
+    
+    }
+
+    &__box{
+        padding: 100px 0;
+        margin: 0 150px 0 387px;
+    }
+
+    &__title{
+        font-size: 21px;
+        line-height: 25px;
+        font-weight: 700;
+        color: #243f4d;
+        margin-bottom: 15px;
+    }
+
+    &__text{
+        font-size: 14px;
+        line-height: 19px;
+        color: #243f4d;
+        margin-bottom:65px;
+    }
+
+    &__btn{
+        padding: 24px 100px 23px 26px;
+        background-color: #a7a9a6;
+        position: relative;
+        font-weight: 700;
+        color: #436372;
+        border-radius: 5px;
+        &::after{
+            content: "";
+            background-image: url('../images/icons/arrow-right.svg');
+            position: absolute;
+            width: 22px;
+            height: 12px;
+            top: 26px;
+            right: 11px;
+        }
+        &:hover{
+            background-color: #a3bbc8;
+        }
+    }
+}
+
+.category{
+    padding: 50px 0;
+
+    &__inner{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    &__list{
+        display: flex;
+        justify-content: center;
+        margin-bottom:  80px;
+    }
+
+    &__list-item + .category__list-item{
+        margin-left: 31px;
+    }
+
+    &__list-link:hover{
+        color: #1a1a1a;
+    }
+
+    &__items{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 35px;
+    }
+
+    &__item{
+        width: 370px;
+        height: 245px;
+        background-color: #f8f8f8;
+        position: relative;
+        overflow: hidden;
+    }
+
+    &__img{
+        position: absolute;
+        top: 97px;
+        left: 111px;
+    }
+
+    &__img-diff{
+        position: absolute;
+        top: 45px;
+        left: 205px;
+    }
+
+    &__content{
+        padding-top: 42px;
+        padding-left: 37px;
+        width: 220px;
+    }
+
+    &__title{
+        color: #1a1a1a;
+        font-size: 20px;
+        line-height: 25px;
+        font-weight: bold;
+        letter-spacing: 0.6px;
+    }
+
+    &__link{
+        color: #a3bbc8;
+        font-size: 15px;
+        line-height: 26px;
+        font-weight: bold;
+    }
+}
