--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -35,8 +35,8 @@ a{
 .title{
     text-align: center;
     @extend %roboto-700;
-    font-size: 40px;
-    line-height: 55px;
+    font-size: 39px;
+    line-height: 45px;
     color: vars.$blacktext;
     margin-bottom: 40px;
 }
@@ -46,3 +46,47 @@ a{
 //     margin: 0 auto 55px;
 //     color: #7b7b7b;
 //  }
+
+
+.title-box{
+    
+    &__inner{
+    padding: 30px 0;
+    background-color: #edf1f4;
+    text-align: center;
+    @extend %roboto-400;
+    color: #1a1a1a;
+    }
+    
+
+    &__title{
+        margin-bottom: 22px;
+        font-size: 32px;
+        line-height: 30px;
+        font-weight: 500;
+    }
+}
+
+.breadcrumbs{
+    display: inline-flex;
+    justify-content: center;
+    margin-left: 15px;
+
+    &__list{
+        display: flex;
+    }
+
+    &__item{
+        color: #838990;
+        &::after{
+            content: "/";
+            padding: 0 20px;
+        }
+
+        &:last-child{
+            &::after{
+                display: none;
+            }
+        }
+    }
+}
