--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -7,6 +7,7 @@
 
 .header{
     
+
     &__inner{
         display: flex;
         justify-content: space-between;
@@ -17,7 +18,7 @@
 }
 
 .menu{
-    
+    margin-left: 170px;
     &__list{
         display: flex;
     }
@@ -94,16 +95,21 @@
    
 }
 
+.footer{
+    display: flex;
+    padding: 50px 0;
+}
+
 .footer-top{
     display: flex;
-    padding: 80px 0 75px;
+    margin-bottom: 75px;
     font-size: 11px;
+    justify-content: space-between;
+    width: 1170px;
      
 
     &__contact{
         max-width: 200px;
-        width: 100%;
-        margin-right: 120px;
     }
 
     &__logo{
@@ -113,14 +119,11 @@
 
     &__nav{
         max-width: 170px;
-        width: 100%;
-        margin-right: 115px;
         padding: 22px 0;
     }
 
     &__form{
         max-width: 275px;
-        width: 100%;
         padding: 22px 0;
     }
 
@@ -490,7 +493,7 @@
 }
 
 .category{
-    padding: 50px 0;
+    padding: 60px 0;
 
     &__inner{
         display: flex;
@@ -544,7 +547,7 @@
         width: 220px;
     }
 
-    &__title{
+    &__item-title{
         color: #1a1a1a;
         font-size: 20px;
         line-height: 25px;
@@ -558,4 +561,248 @@
         line-height: 26px;
         font-weight: bold;
     }
+}
+
+.video{
+    padding: 60px 0;
+    
+    &__bg{
+        display: flex;
+        align-items: center;
+        height: 500px;
+        background-image: url('../images/video-bg.png');
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+ 
+}   
+
+.blog{
+    display: flex;
+    padding: 50px 0 114px;
+    flex-direction: column;
+    position: relative;
+   
+    &__top{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    &__title{
+        text-align: start;
+
+    }
+
+    &__link{
+        color: #1a1a1a;
+        font-weight: 700;
+        position: relative;
+    }
+
+    &__link::after{
+        content: '';
+        background-image: url("../images/icons/angle-small-right.svg");
+        position: absolute;
+        width: 18px;
+        height: 18px;
+        top: -1px;
+        right: -33px;
+
+    }
+
+    &__items{
+        display: flex;
+        justify-content: space-between;
+        column-gap: 35px;
+        margin-bottom: 94px;
+    }
+
+    &__item{
+        max-width: 370px;
+        width: 100%;
+        border-radius: 5px;
+        overflow: hidden;
+        position: relative;   
+        background-color: #fff;          
+    }
+
+    &__item::before{
+        content: 'NEWS';
+        background-color: #a3bbc8;
+        color: #fff;
+        font-size: 12px;
+        line-height: 14px;
+        font-weight: bold;
+        padding: 10px 31px;
+        border-radius: 39px;
+        position: absolute;
+        top: 232px;
+        left: 28px;
+    }
+    
+
+    &__item-box{
+        padding: 37px 32px 30px;
+    }
+
+    &__item-title{
+        font-size: 19px;
+        line-height: 26px;
+        color: #1a1a1a;
+        margin-bottom: 15px;
+    }
+
+    &__item-info{
+        display: flex;
+        align-items: center;
+        padding-top: 22px;
+        border-top: 1px solid #e0e0e0;
+        
+    }
+    
+    &__date,
+    &__author{
+        font-size: 12px;
+        line-height: 13px;
+        color: #1a1a1a;
+        font-weight: bold;
+    }
+    
+    &__date{
+        margin-right: 30px;
+    }
+
+    &__client-list{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    
+    &__stripe{
+        height: 437px;
+        background-color: #fef7f0;  
+        position: absolute;
+        top: 384px;
+        left: 0;
+        right: 0;
+        z-index: -99;
+    }  
+    
+}
+
+
+.terms{
+    
+    &__content{
+        max-width: 1200px;
+        width: 100%;
+        padding: 120px 10px 0;
+        margin: 0 auto;
+    }
+
+    &__item{
+        margin-bottom: 77px;
+    }
+
+    &__title{
+        margin-bottom: 32px;
+        font-size: 26px;
+        @extend %roboto-700;
+        color: #243f4d;
+    }
+
+    &__list{
+        margin: 0 25px;
+        list-style: decimal-leading-zero;
+        color: #243f4d;
+    }
+    
+
+    &__text{
+        margin-bottom: 32px;
+        font-size: 16px;
+        @extend %roboto-400;
+        color: #243f4d;
+    }
+    
+}
+
+
+.modal{
+    max-width: 470px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 120px 0;
+
+    &__label{
+        display: block;
+        margin-bottom: 37px;
+    }
+
+    &__modal{   
+        width: 100%;
+    }
+
+    &__input{
+        width: 100%;
+        height: 56px;
+        border: 2px solid #f6f6f6;
+        color: #436372;
+        margin-top: 15px;
+    }
+
+    &__btn{
+        width: 100%;
+        border: none;
+        margin-bottom: 35px;
+        background-color: #a3bbc8;
+        color: #fff;
+        font-size: 21px;
+        padding: 14px 0;
+        cursor: pointer;
+        &:hover{
+            background-color: #436372;
+        }
+    
+    }
+ 
+    &__bottom-item{
+        display: flex;
+        justify-content: space-between;
+        padding-bottom: 30px;
+        border-bottom: 2px solid #f6f6f6;
+        margin-bottom: 32px;
+    }
+
+    &__label-checkbox{
+        margin-bottom: 0;
+        font-size: 15px;
+        color: #436372;
+        
+    }
+
+    &__restore-psw{
+        font-size: 15px;
+        color: #436372;
+    }
+
+    &__text{
+        text-align: center;
+        color: #436372;
+        margin-bottom: 24px;
+    }
+
+    &__link-btn{
+        display: block;
+        text-align: center;
+        padding: 15px 0;
+        border: 2px solid #a3bbc8;
+        font-size: 17px;
+        font-weight: 700;
+        color: #243f4d;
+        cursor: pointer;
+    }
+    
 }
