--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -580,7 +580,7 @@
 
 .blog{
     display: flex;
-    padding: 50px 0 114px;
+    padding: 50px 0 16px;
     flex-direction: column;
     position: relative;
    
@@ -616,7 +616,6 @@
         display: flex;
         justify-content: space-between;
         column-gap: 35px;
-        margin-bottom: 94px;
     }
 
     &__item{
@@ -681,8 +680,11 @@
     }
     
     &__stripe{
-        height: 437px;
-        background-color: #fef7f0;  
+
+        margin: 0 auto;
+        height: 461px;
+        padding: 0 15px;
+        background-color: #fef7f0;
         position: absolute;
         top: 384px;
         left: 0;
@@ -692,6 +694,23 @@
     
 }
 
+.client{
+   
+    &__inner{
+        background-color: #fef7f0;
+        padding: 78px 0 88px;
+    }
+
+    &__list{
+        max-width: 1200px;
+        width: 100%;
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+}
 
 .terms{
     
@@ -806,3 +825,240 @@
     }
     
 }
+
+.about{
+
+    &__inner{
+        display: flex;
+        justify-content: center;
+        column-gap: 51px;
+        padding: 120px 0;
+    }
+
+    &__content{
+        max-width: 550px;
+        width: 100%; 
+        padding: 80px 0 90px;
+    }
+
+    &__title-conteiner{
+        display: flex;
+        margin-bottom: 50px;
+    }
+
+    &__num-desc{
+        width: 129px;
+        padding-top: 17px;
+        padding-left: 29px;
+        font-size: 17px;
+        line-height: 29px;
+    }
+
+    &__title{
+        margin-bottom: 50px;
+        font-size: 39px;
+    }
+
+    &__text{
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 30px;
+        margin-bottom: 60px;
+    }
+
+    &__num-box{
+        display: flex;
+        justify-content: space-between;
+        padding-top: 29px;
+        border-top: 2px solid #e6eaf0;
+        max-width: 500px;
+        
+       
+    }
+
+    &__num{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        font-size: 35px;
+        font-weight: bold;
+        padding: 0 35px 0 57px;
+        position: relative;
+        height: 80px;
+
+        &::before{
+            content: '';
+            background-image: url('../images/icons/note-about.png');
+            position: absolute;
+            top: 8px;
+            left: 1px;
+            width: 39px;
+            height: 40px;
+        }
+
+    }
+
+    &__num--speaker{
+        border-left: 1px solid #e6eaf0;
+        border-right: 1px solid #e6eaf0;
+        padding: 0 35px 0 90px;
+        &::before{
+            content: '';
+            background-image: url('../images/icons/speaker-about.png');
+            left: 33px;
+            width: 46px;
+            height: 43px;
+        }
+    }
+
+    &__num--medal{
+        padding:  0 0 0 90px;
+
+        &::before{
+            content: '';
+            background-image: url('../images/icons/medal-about.png');
+            left: 33px;
+            width: 44px;
+            height: 44px;
+        }
+    }   
+
+    &__num-text{
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 35px;
+        color: #4c4c4c;
+    }
+}
+
+.widgets{
+    background-color: #fcd7b6;
+    padding: 80px 0;
+
+    &__list{
+        margin: 0 auto;
+        max-width: 1170px;
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: end; 
+    }
+
+    &__img{
+        margin: 0 auto 23px;  
+    }
+
+    &__num{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        font-size: 42px;
+    }
+
+    &__desc{
+        font-size: 16px;
+        margin-top: 25px;
+    }
+}
+
+.team{
+    padding: 120px 0 31px;
+
+    &__inner{
+        display: flex;
+        justify-content: center;
+        column-gap: 100px;
+       
+    }
+
+    &__content{
+        max-width: 310px;
+        width: 100%;
+    }
+
+    &__title{
+        font-size: 39px;
+    line-height: 39px;
+    margin: 8px 0 38px 0;
+    }
+
+    &__text{
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 30px;
+        margin-bottom: 62px;
+    }
+
+    &__btn{
+        padding: 19px 60px 19px 18px;
+        background-color: #a3bbc8;
+        position: relative;
+        font-weight: 700;
+        color: #fff;
+        border-radius: 5px;
+        &::after{
+            content: "";
+            background-image: url('../images/icons/arrow-right.svg');
+            position: absolute;
+            width: 22px;
+            height: 12px;
+            top: 26px;
+            right: 11px;
+        }
+        &:hover{
+            background-color: #436372;
+        }
+    }
+
+    &__items{
+        column-gap: 30px;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    &__item{
+        max-width: 360px;
+        width: 100%;
+        overflow: hidden;
+
+    }
+    
+    &__item-box{
+        max-width: 325px;
+        width: 100%;
+        height: 111px;
+        position: relative;
+        bottom: 37px;
+        background-color: #fff;
+        display: flex;
+        align-items: center;
+    }
+
+    &__name{
+        display: flex;
+        flex-direction: column;
+        font-size: 21px;
+        padding: 31px 57px 31px 25px; 
+        color: #436372;
+    }
+
+    &__position{
+        font-size: 15px;
+        font-weight: 400;
+        margin-top: 3px;
+        color: #565872;
+    }
+
+    &__link-img{
+        padding: 11px;
+        background-color: #f6f6f6;
+        border-radius: 50%;
+    }
+
+    &__link-img-g{
+        padding: 11px 7px;
+        margin-left: 7px;
+    }
+
+}
+
