create product lists

--- a/app/scss/_libs.scss
+++ b/app/scss/_libs.scss
@@ -1,2 +1,4 @@
 @use '../../node_modules/slick-carousel/slick/slick.css';
 @use '../../node_modules/@fancyapps/ui/dist/fancybox/fancybox' as fancy;
+@use '../../node_modules/ion-rangeslider/css/ion.rangeSlider' as rangeSlider;
+@use '../../node_modules/@rateyo/jquery/lib/iife/jquery.rateyo' as rateyo;
