--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -90,3 +90,49 @@ a{
         }
     }
 }
+
+.pagination{
+    display: flex;
+    justify-content: center;
+
+    &__list{
+        display: flex;
+    }
+
+    &__item + .pagination__item{
+        margin-left: 15px;
+    }
+
+    &__link{
+        width: 50px;
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: 1px solid #a3bbc8;
+        color: vars.$darkbluetext;
+        &:hover{
+            color: #fff;
+            background-color: #a3bbc8;
+        }
+    }
+
+    &__link--active{
+        color: #fff;
+        background-color: #a3bbc8;  
+    }
+
+    &__link-next{
+        height: 50px;
+        padding: 0 20px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: 1px solid #a3bbc8;
+        color: vars.$darkbluetext;
+        &:hover{
+            color: #fff;
+            background-color: #a3bbc8;
+        }
+    }
+}
