--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -353,6 +353,100 @@
     width: 270px;
     text-align: center;
     
+    &.product-item--list{
+        width: 870px;
+        display: flex;
+        text-align: left;
+
+        .product-item__img-box{
+            
+            height: 500px;
+            min-width: 370px;
+            background-color: #e6e6e6;
+            margin-right: 60px;
+
+        }
+
+        .product-item__wrapper{
+            padding: 90px 0 80px;
+            
+        }
+
+        .product-item__title,
+        .product-item__price{
+            margin-bottom: 25px;
+            font-size: 40px;
+            line-height: 45px;
+            @extend %roboto-400;
+            color: #333;
+            
+        }
+        .product-item__price{
+            margin-bottom: 35px;
+        }
+
+        .product__star{
+            margin-bottom: 35px;
+        }
+        
+        .product__text{
+            margin-bottom: 40px;
+        }
+
+        .product-item__link-box--list{
+            display: flex;
+        }
+
+        .product-item__link-cart{
+            background-color: #a3bbc8;
+            height: 50px;
+            width: 50px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: relative;
+            margin-left: 2px;
+            transition: 0.3s;
+            &:hover::after{
+                content: "ADD TO CART";
+                position: absolute;
+                background-color: #a3bbc8;
+                left: -3px;
+                width: 208px;
+                height: 50px;
+                border-radius: 4px;
+                font-size: 15px;
+                font-weight: 500;
+                color: #fff;
+                z-index: 99;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+            }
+        }
+        
+        .product-item__link-list{
+            background-color: #fff;
+            margin-left: 12px;
+            width: 50px;
+            height: 50px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        
+
+
+        .jq-ry-group{
+            svg{
+            width: 20px;
+            height: 22px;
+            }
+        }
+        
+        
+    }
 
     &__img-box{
         position: relative;
@@ -1059,6 +1153,239 @@
         padding: 11px 7px;
         margin-left: 7px;
     }
+
+}
+
+
+
+
+.shop{
+    padding: 120px 0;
+
+
+    &__inner{
+        max-width: 1200px;
+        width: 100%;
+        margin: 0 auto;
+        display: flex;
+    }
+
+     &__filters{
+        width: 270px;
+        margin-right: 25px;
+    }
+
+    &__products{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 30px;
+        margin-bottom: 140px;
+        &.shop__products--list{
+            max-width: 870px;
+            width: 100%;
+
+            display: flex;
+        }
+    }
+
+    &__imgone{
+        top: 148px;
+        left: 69%;
+    }
+
+    &__imgtwo{
+        left: 71%;
+    }
+}
+
+.filter{
+    
+    &__item{
+        margin-bottom: 60px;
+    }
+
+    &__title{
+        font-size: 17px;
+        line-height: 20px;
+        color: vars.$darkbluetext;
+        @extend %roboto-700;
+        position: relative;
+        margin-bottom: 30px;
+        &::before{
+            content: '';
+            background-color: vars.$accentblue;
+            position: absolute;
+            border-radius: 1.5px;
+            width: 38px;
+            height: 2px;
+            top: 9px;
+            right: 133px;
+        }  
+    }
+
+    &__price::before{
+        right: 174px;
+    }
+
+    &__brand::before{
+        right: 164px;
+    }
+
+    &__recprod::before{
+        right: 64px;
+    }
+
+}
+
+.filter-category{
+    
+    &__form{
+        display: flex;
+        flex-direction: column;
+    }
+
+    &__label{
+        display: block;
+        cursor: pointer;
+    }
+
+    &__input{
+        display: none;
+        &:checked + .filter-category__checkbox{
+            background-color: #edf1f4;
+        }
+    }
+
+    &__checkbox{
+        height: 40px;
+        display: flex;
+        align-items: center;
+        border-radius: 4px;
+        padding-left: 15px;
+        @extend %roboto-400;
+        font-size: 16px;
+        position: relative;
+        &::after{
+            content: "";
+            position: absolute;
+            top: 8px;
+            right: 18px;
+            width: 16px;
+            height: 25px;
+            background-image: url('../images/icons/angle-dark-right.svg');
+        }
+    }
+
+    
+}
+
+.irs--flat {
+    height: 25px;
+    margin-bottom: 20px;
+}
+.irs--flat .irs-min, 
+.irs--flat .irs-max {
+    display: none;
+}
+.irs--flat .irs-from, 
+.irs--flat .irs-to, 
+.irs--flat .irs-single {
+    display: none;
+}
+
+.irs--flat .irs-line {
+    top: 15px;
+    height: 3px;
+    background-color: #c2d2db;
+    border-radius: 4px;
+}
+
+
+.irs--flat .irs-bar {
+    top: 14px;
+    height: 5px;
+    background-color: #a3bbc8;
+}
+
+
+
+.irs--flat .irs-handle{
+    position: absolute;
+    top: 9px;
+    width: 15px;
+    height: 15px;
+    background-color: #a3bbc8;
+    i:first-child{
+        display: none;
+    }
+}
+
+.filter-price{
+
+    &__label{
+        display: flex;
+        justify-content: space-between;    
+        font-size: 16px;
+        line-height: 19px;
+        color: #000;
+            
+       
+    }
+}
+
+.filter-brand{
+    &__input{
+        display: none;
+        &:checked + .filter-brand__checkbox{
+            background-color: #edf1f4;
+        }
+    }
+
+    &__checkbox{
+        height: 40px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0 23px 0 15px;
+        border-radius: 4px;
+        font-size: 16px;
+        line-height: 20px;
+        color: #243f4d;
+
+
+    }
+}
+
+.filter-recent{
+
+    &__link{
+        display: flex;
+        margin-bottom: 25px;
+        max-width: 200px;
+        height: 70px;
+    }
+
+    &__img{
+        margin-right: 20px;
+    }
+
+    &__title{
+        margin-bottom: 10px;
+        font-size: 12px;
+        line-height: 20px;
+        color: #333;
+    }
+
+    &__star{
+        padding: 0px;
+        margin-bottom: 10px;
+    }
+
+    &__price{
+        color: #333;
+    }
+
+    
 
 }
 
